lexion_lang/tests/snapshots/x86_smoke__x86_smoke_function_value_returns.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86(\"backend/x86_function_value_returns.lex\")"
snapshot_kind: text
---
.intel_syntax noprefix
.text
.global add_one
add_one:
# fn add_one(value: i32) -> i32 {
  push rbp
  mov rbp, rsp
#     return value + 1;
  mov eax, edi
  add eax, 1
  pop rbp
  ret
.global make_adder
make_adder:
# fn make_adder() -> fn(i32) -> i32 {
  push rbp
  mov rbp, rsp
#     return add_one;
  lea rax, [add_one]
  pop rbp
  ret
.global zero
zero:
# fn zero() -> i32 {
  push rbp
  mov rbp, rsp
#     return 0;
  mov eax, 0
  pop rbp
  ret
.global apply_zero
apply_zero:
# fn apply_zero(handler: fn() -> i32) -> i32 {
  push rbp
  mov rbp, rsp
  sub rsp, 16
  mov QWORD PTR [rbp-8], rdi
#     return handler();
  mov rax, QWORD PTR [rbp-8]
  call rax
  add rsp, 16
  pop rbp
  ret
.global main
main:
# fn main() -> i32 {
  push rbp
  mov rbp, rsp
  push rbx
  sub rsp, 32
#     let handler = make_adder();
  sub rsp, 8
  call make_adder
  add rsp, 8
  mov rbx, rax
#     return make_adder()(4) + handler(1) + apply_zero(zero);
  sub rsp, 8
  call make_adder
  add rsp, 8
  mov QWORD PTR [rbp-16], rax
  push rax
  mov rax, QWORD PTR [rbp-16]
  xchg QWORD PTR [rsp], rax
  mov eax, 4
  push rax
  pop rdi
  call QWORD PTR [rsp]
  add rsp, 8
  mov DWORD PTR [rbp-24], eax
  push rax
  mov rax, rbx
  xchg QWORD PTR [rsp], rax
  mov eax, 1
  push rax
  pop rdi
  call QWORD PTR [rsp]
  add rsp, 8
  mov ebx, DWORD PTR [rbp-24]
  add ebx, eax
  lea rax, [zero]
  push rax
  pop rdi
  sub rsp, 8
  call apply_zero
  add rsp, 8
  push rax
  mov eax, ebx
  add eax, DWORD PTR [rsp]
  add rsp, 8
  mov DWORD PTR [rbp-32], eax
  mov eax, DWORD PTR [rbp-32]
  add rsp, 32
  pop rbx
  pop rbp
  ret
