lexion_lang/tests/snapshots/x86_smoke__x86_smoke_function_value_stages_indirect_target_before_arguments.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86_with_registers(\"backend/x86_function_value_indirect_target.lex\",\nvec![Register::RAX],)"
snapshot_kind: text
---
.intel_syntax noprefix
.text
.global add_one
add_one:
# fn add_one(value: i32) -> i32 {
  push rbp
  mov rbp, rsp
  sub rsp, 16
#     return value + 1;
  add eax, 1
  mov DWORD PTR [rbp-8], eax
  mov eax, DWORD PTR [rbp-8]
  add rsp, 16
  pop rbp
  ret
.global main
main:
# fn main() -> i32 {
  push rbp
  mov rbp, rsp
  sub rsp, 16
#     let handler = add_one;
  lea rax, [add_one]
#     return handler(4);
  push rax
  xchg QWORD PTR [rsp], rax
  mov eax, 4
  push rax
  pop rdi
  sub rsp, 8
  call QWORD PTR [rsp+8]
  add rsp, 8
  add rsp, 8
  mov DWORD PTR [rbp-8], eax
  mov eax, DWORD PTR [rbp-8]
  add rsp, 16
  pop rbp
  ret
