lexion_lang/tests/snapshots/x86_smoke__x86_smoke_function_values.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86(\"backend/x86_function_values.lex\")"
snapshot_kind: text
---
.intel_syntax noprefix
.text
.global add_one
add_one:
# fn add_one(value: i32) -> i32 {
  push rbp
  mov rbp, rsp
#     return value + 1;
  mov eax, edi
  add eax, 1
  pop rbp
  ret
.global apply
apply:
# fn apply(handler: fn(i32) -> i32, value: i32) -> i32 {
  push rbp
  mov rbp, rsp
  sub rsp, 16
  mov QWORD PTR [rbp-8], rdi
  mov DWORD PTR [rbp-16], esi
#     return handler(value);
  push rax
  mov rax, QWORD PTR [rbp-8]
  xchg QWORD PTR [rsp], rax
  mov eax, DWORD PTR [rbp-16]
  push rax
  pop rdi
  sub rsp, 8
  call QWORD PTR [rsp+8]
  add rsp, 8
  add rsp, 8
  add rsp, 16
  pop rbp
  ret
.global main
main:
# fn main() -> i32 {
  push rbp
  mov rbp, rsp
#     let handler = add_one;
  lea rdi, [add_one]
#     return apply(handler, 4);
  mov eax, 4
  push rax
  mov rax, rdi
  push rax
  pop rdi
  pop rsi
  call apply
  pop rbp
  ret
