lexion_lang/tests/snapshots/x86_smoke__x86_smoke_indexed_indirect_return_stack_pair_arguments.snap
---
source: lexion_lang/tests/x86_smoke.rs
assertion_line: 253
expression: "compile_x86(\"backend/x86_indexed_indirect_return_stack_pair_arguments.lex\")"
snapshot_kind: text
---
.intel_syntax noprefix
.text
.global pack
pack:
# fn pack(a: i32, b: i32, c: i32, d: i32, e: i32, tail: i32, triple: Triple) -> Large {
  push rbp
  mov rbp, rsp
  sub rsp, 48
  mov QWORD PTR [rbp-48], rdi
  mov edi, DWORD PTR [rbp+16]
  mov eax, DWORD PTR [rbp+24]
  mov DWORD PTR [rbp-40], eax
  mov eax, DWORD PTR [rbp+24+4]
  mov DWORD PTR [rbp-40+4], eax
  mov eax, DWORD PTR [rbp+24+8]
  mov DWORD PTR [rbp-40+8], eax
#         first: a + tail,
  mov r10d, esi
  add r10d, edi
  mov DWORD PTR [rbp-28], r10d
#         second: b + triple.first,
  mov edi, DWORD PTR [rbp-40]
  mov esi, edx
  add esi, edi
  mov DWORD PTR [rbp-24], esi
#         third: c + triple.second,
  mov edi, DWORD PTR [rbp-36]
  mov esi, ecx
  add esi, edi
  mov DWORD PTR [rbp-20], esi
#         fourth: d + triple.third,
  mov edi, DWORD PTR [rbp-32]
  mov esi, r8d
  add esi, edi
  mov DWORD PTR [rbp-16], esi
#         fifth: e
  mov DWORD PTR [rbp-12], r9d
#     return Large {
#         first: a + tail,
#         second: b + triple.first,
#         third: c + triple.second,
#         fourth: d + triple.third,
#         fifth: e
#     };
  mov rax, QWORD PTR [rbp-48]
  mov ecx, DWORD PTR [rbp-28]
  mov DWORD PTR [rax+0], ecx
  mov ecx, DWORD PTR [rbp-28+4]
  mov DWORD PTR [rax+4], ecx
  mov ecx, DWORD PTR [rbp-28+8]
  mov DWORD PTR [rax+8], ecx
  mov ecx, DWORD PTR [rbp-28+12]
  mov DWORD PTR [rax+12], ecx
  mov ecx, DWORD PTR [rbp-28+16]
  mov DWORD PTR [rax+16], ecx
  mov rax, QWORD PTR [rbp-48]
  add rsp, 48
  pop rbp
  ret
.global main
main:
# fn main() -> i32 {
  push rbp
  mov rbp, rsp
  sub rsp, 80
#     let value = pack(1, 2, 3, 4, 5, 6, Triple { first: 7, second: 8, third: 9 });
  mov eax, 7
  mov DWORD PTR [rbp-48], eax
  mov eax, 8
  mov DWORD PTR [rbp-44], eax
  mov eax, 9
  mov DWORD PTR [rbp-40], eax
  sub rsp, 16
  mov QWORD PTR [rsp], 0
  mov QWORD PTR [rsp+8], 0
  mov eax, DWORD PTR [rbp-48]
  mov DWORD PTR [rsp], eax
  mov eax, DWORD PTR [rbp-48+4]
  mov DWORD PTR [rsp+4], eax
  mov eax, DWORD PTR [rbp-48+8]
  mov DWORD PTR [rsp+8], eax
  mov eax, 6
  push rax
  mov eax, 5
  push rax
  mov eax, 4
  push rax
  mov eax, 3
  push rax
  mov eax, 2
  push rax
  mov eax, 1
  push rax
  lea rdi, [rbp-36]
  pop rsi
  pop rdx
  pop rcx
  pop r8
  pop r9
  sub rsp, 8
  mov rax, QWORD PTR [rsp+8]
  mov QWORD PTR [rsp], rax
  mov rax, QWORD PTR [rsp+16]
  mov QWORD PTR [rsp+8], rax
  mov rax, QWORD PTR [rsp+24]
  mov QWORD PTR [rsp+16], rax
  call pack
  add rsp, 32
  mov eax, DWORD PTR [rbp-36]
  mov DWORD PTR [rbp-68], eax
  mov eax, DWORD PTR [rbp-36+4]
  mov DWORD PTR [rbp-68+4], eax
  mov eax, DWORD PTR [rbp-36+8]
  mov DWORD PTR [rbp-68+8], eax
  mov eax, DWORD PTR [rbp-36+12]
  mov DWORD PTR [rbp-68+12], eax
  mov eax, DWORD PTR [rbp-36+16]
  mov DWORD PTR [rbp-68+16], eax
#     return value.first + value.second + value.third + value.fourth + value.fifth;
  mov eax, DWORD PTR [rbp-68]
  mov esi, DWORD PTR [rbp-64]
  mov edx, eax
  add edx, esi
  mov eax, DWORD PTR [rbp-60]
  mov esi, edx
  add esi, eax
  mov eax, DWORD PTR [rbp-56]
  mov edx, esi
  add edx, eax
  mov eax, DWORD PTR [rbp-52]
  mov DWORD PTR [rbp-16], eax
  mov eax, edx
  add eax, DWORD PTR [rbp-16]
  add rsp, 80
  pop rbp
  ret
