lexion_lang/tests/snapshots/x86_smoke__x86_smoke_narrow_reference_dereference.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86(\"backend/x86_narrow_reference_dereference.lex\")"
snapshot_kind: text
---
.intel_syntax noprefix
.text
.global update_char
update_char:
# fn update_char(value: char, replacement: char) -> char {
  push rbp
  mov rbp, rsp
  sub rsp, 32
  mov DWORD PTR [rbp-20], edi
#     let reference = &value;
  lea rax, [rbp-20]
  mov QWORD PTR [rbp-8], rax
  mov rax, QWORD PTR [rbp-8]
  mov QWORD PTR [rbp-16], rax
#     *reference = replacement;
  mov ecx, esi
  mov rax, QWORD PTR [rbp-16]
  mov BYTE PTR [rax], cl
#     return *reference;
  mov rax, QWORD PTR [rbp-16]
  movzx eax, BYTE PTR [rax]
  add rsp, 32
  pop rbp
  ret
.global main
main:
# fn main() -> i32 {
  push rbp
  mov rbp, rsp
  sub rsp, 32
#     let value = true;
  mov eax, 1
  mov DWORD PTR [rbp-28], eax
#     let reference = &value;
  lea rax, [rbp-28]
  mov QWORD PTR [rbp-16], rax
  mov rax, QWORD PTR [rbp-16]
  mov QWORD PTR [rbp-24], rax
#     *reference = false;
  mov ecx, 0
  mov rax, QWORD PTR [rbp-24]
  mov BYTE PTR [rax], cl
#     let result = if *reference { 1 } else { 0 };
  mov rax, QWORD PTR [rbp-24]
  movzx eax, BYTE PTR [rax]
  mov edi, eax
  cmp edi, 0
  je $celse_1
$cthen_1:
  mov eax, 1
  mov DWORD PTR [rbp-8], eax
  jmp $cend_1
$celse_1:
  mov eax, 0
  mov DWORD PTR [rbp-8], eax
$cend_1:
  mov eax, DWORD PTR [rbp-8]
#     return result;
  add rsp, 32
  pop rbp
  ret
