lexion_lang/tests/snapshots/x86_smoke__x86_smoke_nested_function_value_argument.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86(\"backend/x86_nested_function_value.lex\")"
snapshot_kind: text
---
.intel_syntax noprefix
.text
.global apply
apply:
# fn apply(handler: fn(i32) -> i32, value: i32) -> i32 {
  push rbp
  mov rbp, rsp
  sub rsp, 16
  mov QWORD PTR [rbp-8], rdi
  mov DWORD PTR [rbp-16], esi
#     return handler(value);
  push rax
  mov rax, QWORD PTR [rbp-8]
  xchg QWORD PTR [rsp], rax
  mov eax, DWORD PTR [rbp-16]
  push rax
  pop rdi
  sub rsp, 8
  call QWORD PTR [rsp+8]
  add rsp, 8
  add rsp, 8
  add rsp, 16
  pop rbp
  ret
.global main
main:
# fn main() -> i32 {
  push rbp
  mov rbp, rsp
  pop rbp
  ret
.global add_one
add_one:
  push rbp
  mov rbp, rsp
#     fn add_one(value: i32) -> i32 {
#         return value + 1;
  mov eax, edi
  add eax, 1
  pop rbp
  ret
#     return apply(add_one, 4);
  mov eax, 4
  push rax
  lea rax, [add_one]
  push rax
  pop rdi
  pop rsi
  call apply
  pop rbp
  ret
