lexion_lang/tests/snapshots/x86_smoke__x86_smoke_one_eightbyte_aggregate_abi_padding.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86(\"backend/x86_aggregate_abi_padding.lex\")"
snapshot_kind: text
---
.intel_syntax noprefix
.text
.global adjust
adjust:
# fn adjust(flagged: Flagged) -> Flagged {
  push rbp
  mov rbp, rsp
  sub rsp, 16
  push rdi
  mov eax, DWORD PTR [rsp]
  mov DWORD PTR [rbp-16], eax
  mov eax, DWORD PTR [rsp+4]
  mov DWORD PTR [rbp-16+4], eax
  add rsp, 8
#     return Flagged { value: flagged.value + 1, flag: flagged.flag };
  mov esi, DWORD PTR [rbp-16]
  mov edx, esi
  add edx, 1
  mov DWORD PTR [rbp-8], edx
  movzx esi, BYTE PTR [rbp-12]
  mov BYTE PTR [rbp-4], sil
  sub rsp, 8
  mov QWORD PTR [rsp], 0
  mov eax, DWORD PTR [rbp-8]
  mov DWORD PTR [rsp], eax
  mov al, BYTE PTR [rbp-8+4]
  mov BYTE PTR [rsp+4], al
  mov rax, QWORD PTR [rsp]
  add rsp, 8
  add rsp, 16
  pop rbp
  ret
.global main
main:
# fn main() -> i32 {
  push rbp
  mov rbp, rsp
  sub rsp, 48
#     let flagged = Flagged { value: 3, flag: true };
  mov eax, 3
  mov DWORD PTR [rbp-16], eax
  mov eax, 1
  mov BYTE PTR [rbp-12], al
  mov eax, DWORD PTR [rbp-16]
  mov DWORD PTR [rbp-40], eax
  mov eax, DWORD PTR [rbp-16+4]
  mov DWORD PTR [rbp-40+4], eax
#     let adjusted = adjust(flagged);
  sub rsp, 8
  mov QWORD PTR [rsp], 0
  mov eax, DWORD PTR [rbp-40]
  mov DWORD PTR [rsp], eax
  mov eax, DWORD PTR [rbp-40+4]
  mov DWORD PTR [rsp+4], eax
  pop rdi
  call adjust
  push rax
  mov eax, DWORD PTR [rsp]
  mov DWORD PTR [rbp-24], eax
  mov eax, DWORD PTR [rsp+4]
  mov DWORD PTR [rbp-24+4], eax
  add rsp, 8
  mov eax, DWORD PTR [rbp-24]
  mov DWORD PTR [rbp-32], eax
  mov eax, DWORD PTR [rbp-24+4]
  mov DWORD PTR [rbp-32+4], eax
#     return adjusted.value + adjusted.flag;
  mov eax, DWORD PTR [rbp-32]
  mov DWORD PTR [rbp-8], eax
  movzx esi, BYTE PTR [rbp-28]
  mov eax, DWORD PTR [rbp-8]
  add eax, esi
  add rsp, 48
  pop rbp
  ret
